<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/ip_cardview"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewheader_info"
            android:textSize="30sp"
            android:textColor="@color/colordarkblue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textviewheader_countryname"
                android:textSize="15sp"
                android:textColor="@color/colored"/>

            <TextView
                android:id="@+id/textview_countryname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorgreen"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_countrycode"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_countrycode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_region"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_regionname"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_regionname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_city"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_zip"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_lat"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_lon"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_lon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_timezone"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_timezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textviewheader_org"
                    android:textSize="15sp"
                    android:textColor="@color/colored"/>

                <TextView
                    android:id="@+id/textview_org"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorgreen"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/backbutton"
        android:layout_below="@+id/ip_cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="backbutton"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/info_button"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-4977622113046142/9564393704">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>