<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@drawable/bluewallpaper">

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="250dp"
                android:layout_height="70dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorwhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp">

                <TextView
                    android:id="@+id/text_header_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/ip_header_text"
                    android:textColor="@color/colorlightblue"
                    android:textSize="20sp"/>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_info_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/ip_text"
                android:textAlignment="center"
                android:textColor="@color/colorlightblue"
                android:textSize="17sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_ip"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:helperTextEnabled="true"
                android:layout_below="@+id/text_info_ip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:helperText="İP ADRESİ GİRİNİZ">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_edit_text_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorlightblue"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_ip_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip_query"
                android:textColor="@color/colorwhite"
                android:onClick="ipquery"
                android:background="@color/colorlightblue"
                android:layout_below="@+id/text_input_layout_ip"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"/>


            <TextView
                android:id="@+id/whatisippaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_ip_query"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorgreen"
                android:text="@string/textview_what_is_ip_address"
                android:onClick="whatisipaddress"/>

            <android.support.v7.widget.CardView
                android:id="@+id/ip_cardview"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@+id/whatisippaddress"
                app:cardElevation="15dp"
                android:visibility="invisible"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ip_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ip"/>

                    <TextView
                        android:id="@+id/ip_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/colorlightblue"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/ip_imageview"
                        android:text="11"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_below="@+id/ip_imageview">

                        <Button
                            android:id="@+id/find_location"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/colorlightblue"
                            android:onClick="find_location"
                            android:text="@string/ip_show_location"
                            android:textSize="15sp"
                            android:textColor="@color/colorwhite"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/ip_learn_info"
                            android:textSize="15sp"
                            android:textColor="@color/colorwhite"
                            android:background="@color/colorlightblue"
                            android:onClick="bringinfo"/>

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>